...
    }

    var title: String {
        switch self {
        case .appearance: String(localized: "Appearance")
        case .notificationsAndHaptics: String(localized: "Notifications & Haptics")
        case .chats: String(localized: "Chats")
        case .liveActivitiesAndWidgets: String(localized: "Live Activities & Widgets")
        case .siriAndShortcuts: String(localized: "Siri & Shortcuts")
        case .servers: String(localized: "Servers")
        case .providers: String(localized: "Providers")
        case .dataAndStorage: String(localized: "Data & Storage")
        case .about: String(localized: "About")
...
